# Aegis

./: README.md
aegis_circuit/: .env.example  .gitignore  Cargo.toml
aegis_circuit/src/: lib.rs  utils.rs
aegis_circuit/src/cbdc/: mod.rs  tree_config.rs
aegis_circuit/src/cbdc/circuits/: exchange_circuit.rs  mod.rs  poseidon_circuit.rs  receive_circuit.rs  register_circuit.rs  send_circuit.rs  sha256_circuit.rs
aegis_circuit/src/cbdc/tests/: exchange_test.rs  mod.rs  receive_test.rs  register_test.rs  send_test.rs
aegis_circuit/src/gadget/: mod.rs
aegis_circuit/src/gadget/hashes/: mod.rs
aegis_circuit/src/gadget/hashes/poseidon/: mod.rs  poseidon_params.rs
aegis_circuit/src/gadget/merkle_tree/: constraints.rs  mocking.rs  mod.rs
aegis_circuit/src/gadget/symmetric_encrytions/: constraints.rs
aegis_circuit/src/gadget/symmetric_encrytions/symmetric/: constraints.rs  mod.rs
aegis_circuit/src/gro/: data_structures.rs  generator.rs  prover.rs  verifier.rs
aegis_circuit/src/keys/: mod.rs
aegis_circuit/src/linker/comp_am_com_eq/: mod.rs
aegis_circuit/src/tests/: aegis_circuit.rs  mod.rs  run_tests.sh
aegis_contract/: hardhat.config.ts  package-lock.json  package.json
aegis_contract/contracts/: Aegis.sol  CBDC.sol  PoseidonHasher.sol  PoseidonMerkleTree.sol  PoseidonMerkleTreeAsm.sol
aegis_contract/contracts/crypto/groth16/: Groth16AltBN128.sol  ccGroth16VerifyBn128.sol
aegis_contract/result/: send.input.json
aegis_contract/result/dbt/: dbtData.ts
aegis_contract/test/: Aegis.ts  CBDC.ts  PoseidonHash.ts  PoseidonMerkleTree.ts  utils.ts
(+8 files in other folders)
