[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
ark-ff = "0.4.2"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [
    "r1cs",
    "encryption",
    "crh",
    "merkle_tree",
    "sponge",
] }
ark-ec = "0.4.2"
ark-ed-on-bn254 = { version = "^0.4.0", features = ["r1cs"] }
ark-groth16 = "0.4.0"
derivative = "2.2.0"
num-bigint = "0.4.6"
lazy_static = "1.4.0"
serde_json = "1.0.108"
regex = "1.10.6"
rand = "0.8.5"
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "^0.4.0", features = ["r1cs"] }


[features]
default = []
print-trace = ["ark-std/print-trace"]
